--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -2,6 +2,7 @@
 
   <!-- MODALS
     ================================================== -->
+  <!-- Deposit modal -->
   <div class="modal fade" id="modalDeposit" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content bg-lighter">
@@ -33,16 +34,16 @@
             <div class="col-5 col-lg-6">
               <input type="tel"
                 class="d-none d-lg-flex form-control form-control-flush input-text-lg font-weight-bold text-dark text-center"
-                placeholder="0" data-mask="#,##0.00" data-mask-reverse="true">
+                placeholder="0" data-mask="#,##0.00" data-mask-reverse="true" min="0" [ngModel]="depositActionAmount.toNumber()" (ngModelChange)="onDepositActionAmountChange($event)">
               <input type="tel"
                 class="d-flex d-lg-none form-control form-control-flush h1 font-weight-bold text-dark text-center"
-                placeholder="0" data-mask="#,##0.00" data-mask-reverse="true">
+                placeholder="0" data-mask="#,##0.00" data-mask-reverse="true" min="0" [ngModel]="depositActionAmount.toNumber()" (ngModelChange)="onDepositActionAmountChange($event)">
             </div>
           </div> <!-- / .row -->
           <div class="row">
             <div class="col">
               <h6 class="text-uppercase text-center text-muted my-3">
-                Available for deposit: 10,000.00 DAI
+                Available for deposit: {{depositActionUserBalance.toFormat(18)}} DAI
               </h6>
             </div>
           </div>
@@ -52,12 +53,12 @@
                 <li class="list-group-item d-flex align-items-center justify-content-between px-0 pb-2">
                   <div>
                     <small>Lock period</small><br>
-                    <small class="text-muted">90 days minimum</small>
+                    <small class="text-muted">91 days minimum</small>
                   </div>
                   <div class="input-group ml-auto w-50">
                     <input type="tel"
-                      class="form-control form-control-flush font-weight-bold text-dark h2 text-right mb-0" value="90"
-                      placeholder="90" data-mask="#,##0" data-mask-reverse="true" id="lock-period">
+                      class="form-control form-control-flush font-weight-bold text-dark h2 text-right mb-0" min="90" value="90"
+                      placeholder="90" data-mask="#,##0" data-mask-reverse="true" id="lock-period" [ngModel]="depositActionLockPeriod.toNumber()" (ngModelChange)="onDepositActionDepositPeriodChange($event)">
                     <div class="input-group-append">
                       <span class="input-group-text border-0 text-secondary bg-transparent text-right pr-0"
                         id="lock-period">days</span>
@@ -65,13 +66,13 @@
                   </div>
                 </li>
                 <li class="list-group-item d-flex align-items-center justify-content-between px-0">
-                  <small>Fixed APY</small> <span class="h2 mb-0">8.00%</span>
+                  <small>Fixed APY</small> <span class="h2 mb-0">{{depositActionAPY.toFormat(2)}}%</span>
                 </li>
                 <li class="list-group-item d-flex align-items-center justify-content-between px-0">
-                  <small>Upfront interest</small> <span class="display-4 mb-0 text-success">$0.00</span>
+                  <small>Upfront interest</small> <span class="display-4 mb-0 text-success">${{depositActionInterest.toFormat(2)}}</span>
                 </li>
               </ul>
-              <button class="btn btn-block btn-success" type="button" name="button">Deposit DAI</button>
+              <button class="btn btn-block btn-success" type="button" name="button" (click)="deposit()">Make Deposit</button>
             </div>
 
           </div>
@@ -81,6 +82,7 @@
     </div>
   </div>
 
+  <!-- Withdraw modal -->
   <div class="modal fade" id="modalWithdraw" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content bg-lighter">
@@ -161,11 +163,14 @@
                 <li class="list-group-item d-flex align-items-center justify-content-between px-0">
                   <div>
                     <small>Lock period</small><br>
-                    <small class="text-dark font-weight-bold">{{getTimeDifferenceDays(selectedDeposit.maturationTimestamp, selectedDeposit.depositTimestamp)}} days</small>
+                    <small
+                      class="text-dark font-weight-bold">{{getTimeDifferenceDays(selectedDeposit.maturationTimestamp, selectedDeposit.depositTimestamp)}}
+                      days</small>
                   </div>
                   <div class="text-right">
                     <small>Time left</small><br>
-                    <small class="text-dark font-weight-bold mb-0">{{getTimeDifferenceString(selectedDeposit.maturationTimestamp, now)}}</small>
+                    <small
+                      class="text-dark font-weight-bold mb-0">{{getTimeDifferenceString(selectedDeposit.maturationTimestamp, now)}}</small>
                   </div>
                 </li>
                 <li class="list-group-item d-flex align-items-center justify-content-between px-0">
@@ -173,7 +178,8 @@
                     <small>Deposit time</small>
                   </div>
                   <div class="text-right">
-                    <small class="text-dark font-weight-bold mb-0">{{selectedDeposit.depositTimestamp.toLocaleString()}}</small>
+                    <small
+                      class="text-dark font-weight-bold mb-0">{{selectedDeposit.depositTimestamp.toLocaleString()}}</small>
                   </div>
                 </li>
                 <li class="list-group-item d-flex align-items-center justify-content-between px-0">
@@ -181,14 +187,17 @@
                     <small>Unlock time</small>
                   </div>
                   <div class="text-right">
-                    <small class="text-dark font-weight-bold mb-0">{{selectedDeposit.maturationTimestamp.toLocaleString()}}</small>
+                    <small
+                      class="text-dark font-weight-bold mb-0">{{selectedDeposit.maturationTimestamp.toLocaleString()}}</small>
                   </div>
                 </li>
                 <li class="list-group-item d-flex align-items-center justify-content-between px-0">
-                  <small>Fixed APY</small> <span class="text-dark mb-0">{{calcDepositAPY(selectedDeposit).toFormat(2)}}%</span>
+                  <small>Fixed APY</small> <span
+                    class="text-dark mb-0">{{calcDepositAPY(selectedDeposit).toFormat(2)}}%</span>
                 </li>
                 <li class="list-group-item d-flex align-items-center justify-content-between px-0">
-                  <small>Upfront interest</small> <span class="h2 mb-0 text-success">${{selectedDeposit.interestEarned.toFormat(2)}}</span>
+                  <small>Upfront interest</small> <span
+                    class="h2 mb-0 text-success">${{selectedDeposit.interestEarned.toFormat(2)}}</span>
                 </li>
               </ul>
             </div>
@@ -239,7 +248,7 @@
           </h1>
           <div class="btn-group btn-group-lg" role="group" aria-label="Basic example">
             <a class="btn btn btn-lg animated-background text-white border-0" data-toggle="modal"
-              data-target="#modalDeposit">Deposit</a>
+              data-target="#modalDeposit" (click)="openDepositActionModal()">Deposit</a>
             <a class="btn btn-dark text-white" data-toggle="modal" data-target="#modalWithdraw">Withdraw</a>
           </div>
 
@@ -276,7 +285,8 @@
               <div class="list-group list-group-flush my-n3">
                 <!-- IDEA: first user's session -->
                 <ng-container *ngIf="!(userAddress && userDeposits.length)">
-                  <a class="list-group-item" href="#" data-toggle="modal" data-target="#modalDeposit">
+                  <a class="list-group-item" href="#" data-toggle="modal" data-target="#modalDeposit"
+                    (click)="openDepositActionModal()">
                     <div class="row align-items-center">
                       <div class="col-auto">
 
@@ -308,7 +318,8 @@
 
                 <!-- IDEA: recurring user -->
                 <ng-container *ngFor="let deposit of userDeposits">
-                  <a class="list-group-item" href="#" data-toggle="modal" data-target="#modalDetailTx" (click)="openDepositDetails(deposit)">
+                  <a class="list-group-item" href="#" data-toggle="modal" data-target="#modalDetailTx"
+                    (click)="openDepositDetails(deposit)">
                     <div class="row align-items-center">
                       <div class="col-auto">
 
