Fixed deposit modal

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -3,7 +3,7 @@
   <!-- MODALS
     ================================================== -->
   <!-- Deposit modal -->
-  <div class="modal fade" id="modalDeposit" tabindex="-1" role="dialog" aria-hidden="true" *ngIf="depositActionShowModal">
+  <div class="modal fade" id="modalDeposit" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content bg-lighter">
         <div class="modal-body">
