--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -70,11 +70,11 @@
                   </div>
                 </li>
                 <li class="list-group-item d-flex align-items-center justify-content-between px-0">
-                  <small>Fixed APY</small> <span class="h2 mb-0">{{depositActionAPY.toFormat(2)}}%</span>
+                  <small>Fixed APY</small> <span class="h2 mb-0">{{depositActionAPY.toFormat(DECIMALS)}}%</span>
                 </li>
                 <li class="list-group-item d-flex align-items-center justify-content-between px-0">
                   <small>Upfront interest</small> <span
-                    class="display-4 mb-0 text-success">${{depositActionInterest.toFormat(2)}}</span>
+                    class="display-4 mb-0 text-success">${{depositActionInterest.toFormat(DECIMALS)}}</span>
                 </li>
               </ul>
               <button class="btn btn-block btn-success" type="button" name="button" (click)="deposit()">Make
@@ -117,7 +117,7 @@
           </div>
           <div class="row justify-content-center align-items-center">
             <div class="col">
-              <h1 class="text-center">{{withdrawActionAmount.toFormat(2)}} DAI</h1>
+              <h1 class="text-center">{{withdrawActionAmount.toFormat(DECIMALS)}} DAI</h1>
             </div>
           </div> <!-- / .row -->
           <div class="row justify-content-center">
@@ -158,9 +158,9 @@
                 <span class="d-inline-block" *ngIf="selectedDeposit.maturationTimestamp > now">🔒 Locked</span>
                 <span class="d-inline-block" *ngIf="now >= selectedDeposit.maturationTimestamp">💸 Unlocked</span>
               </h4>
-              <div class="display-4 my-3 text-center">{{selectedDeposit.amount.toFormat(2)}}</div>
+              <div class="display-4 my-3 text-center">{{selectedDeposit.amount.toFormat(DECIMALS)}}</div>
               <h6 class="text-uppercase text-center text-muted mb-0">
-                ~${{selectedDeposit.amount.toFormat(2)}}
+                ~${{selectedDeposit.amount.toFormat(DECIMALS)}}
               </h6>
             </div>
           </div>
@@ -200,11 +200,11 @@
                 </li>
                 <li class="list-group-item d-flex align-items-center justify-content-between px-0">
                   <small>Fixed APY</small> <span
-                    class="text-dark mb-0">{{calcDepositAPY(selectedDeposit).toFormat(2)}}%</span>
+                    class="text-dark mb-0">{{calcDepositAPY(selectedDeposit).toFormat(DECIMALS)}}%</span>
                 </li>
                 <li class="list-group-item d-flex align-items-center justify-content-between px-0">
                   <small>Upfront interest</small> <span
-                    class="h2 mb-0 text-success">${{selectedDeposit.interestEarned.toFormat(2)}}</span>
+                    class="h2 mb-0 text-success">${{selectedDeposit.interestEarned.toFormat(DECIMALS)}}</span>
                 </li>
               </ul>
             </div>
@@ -246,12 +246,12 @@
         <div class="col-12 col-lg-6 text-center">
           <!-- Pretitle -->
           <h5 class="header-pretitle">
-            Earn <span class="text-white">{{oneYearInterestRate.toFormat(2)}}%</span> Upfront Fixed APY*
+            Earn <span class="text-white">{{oneYearInterestRate.toFormat(DECIMALS)}}%</span> Upfront Fixed APY*
           </h5>
 
           <!-- Title -->
           <h1 class="header-title display-4 text-white mb-4">
-            ${{userTotalInterestEarned.toFormat(2)}}
+            ${{userTotalInterestEarned.toFormat(DECIMALS)}}
           </h1>
           <div class="btn-group btn-group-lg" role="group" aria-label="Basic example">
             <a class="btn btn btn-lg animated-background text-white border-0" data-toggle="modal"
@@ -277,13 +277,13 @@
                 <h6 class="text-uppercase text-muted mb-2">
                   Total deposited
                 </h6>
-                <h2 class="mb-0">${{userTotalActiveDeposit.toFormat(2)}}</h2>
+                <h2 class="mb-0">${{userTotalActiveDeposit.toFormat(DECIMALS)}}</h2>
               </div>
               <div class="text-right">
                 <h6 class="text-uppercase text-muted mb-2">
                   Interest earned
                 </h6>
-                <h2 class="text-success mb-0">${{userTotalInterestEarned.toFormat(2)}}</h2>
+                <h2 class="text-success mb-0">${{userTotalInterestEarned.toFormat(DECIMALS)}}</h2>
               </div>
 
             </div>
@@ -313,7 +313,7 @@
 
                         <!-- Text -->
                         <small class="text-muted">
-                          Earn <strong>{{oneYearInterestRate.toFormat(2)}}%</strong> upfront fixed APY 🤑
+                          Earn <strong>{{oneYearInterestRate.toFormat(DECIMALS)}}%</strong> upfront fixed APY 🤑
                         </small>
 
                       </div>
@@ -341,7 +341,7 @@
 
                         <!-- Title -->
                         <h4 class="font-weight-normal mb-1  text-dark">
-                          {{deposit.amount.toFormat(2)}} DAI
+                          {{deposit.amount.toFormat(DECIMALS)}} DAI
                           <ng-container *ngIf="deposit.maturationTimestamp > now; else displayUnlockedIcon">
                             🔒
                           </ng-container>
@@ -352,13 +352,13 @@
 
                         <!-- Text -->
                         <small class="text-muted">
-                          at <strong>{{calcDepositAPY(deposit).toFormat(2)}}%</strong> fixed APY
+                          at <strong>{{calcDepositAPY(deposit).toFormat(DECIMALS)}}%</strong> fixed APY
                         </small>
 
                       </div>
                       <div class="col-auto text-right">
-                        <span class="text-success d-block">{{deposit.interestEarned.toFormat(2)}} DAI</span>
-                        <span class="text-muted small">${{deposit.interestEarned.toFormat(2)}}</span>
+                        <span class="text-success d-block">{{deposit.interestEarned.toFormat(DECIMALS)}} DAI</span>
+                        <span class="text-muted small">${{deposit.interestEarned.toFormat(DECIMALS)}}</span>
                       </div>
                     </div> <!-- / .row -->
                   </a>
@@ -407,7 +407,7 @@
 
               <!-- Title -->
               <h3 class="header-title h1">
-                2. Earn <strong class="interest-rate">{{oneYearInterestRate.toFormat(2)}}%</strong> upfront fixed-rate
+                2. Earn <strong class="interest-rate">{{oneYearInterestRate.toFormat(DECIMALS)}}%</strong> upfront fixed-rate
                 interest
               </h3>
 
@@ -429,8 +429,8 @@
 
             </div>
           </div>
-          <p>When the lock period is over, withdraw your initial deposit. If you deposited 100.00 DAI, yeah,
-            you get back 100.00 DAI.</p>
+          <p>When the lock period is over, withdraw your initial deposit. If you deposited 100.0000 DAI, yeah,
+            you get back 100.0000 DAI.</p>
           <div class="header mt-md-5">
             <div class="header-body">
 
@@ -442,7 +442,8 @@
             </div>
           </div>
           <p>
-            88mph charges a 10% fee on your upfront interest.</p>
+            88mph charges a 10% fee on your upfront interest. The fee is already factored into the displayed APY
+            ({{oneYearInterestRate.toFormat(DECIMALS)}}%), so don't worry about doing more math 😉</p>
           <div class="header mt-md-5">
             <div class="header-body">
 
@@ -512,7 +513,7 @@
 
                       <!-- Heading -->
                       <span class="h2 mb-0">
-                        ${{totalActiveDeposit.toFormat(2)}}
+                        ${{totalActiveDeposit.toFormat(DECIMALS)}}
                       </span>
 
                     </div>
@@ -532,7 +533,7 @@
 
                       <!-- Heading -->
                       <span class="h2 mb-0">
-                        ${{totalValue.toFormat(2)}}
+                        ${{totalValue.toFormat(DECIMALS)}}
                       </span>
 
                     </div>
@@ -555,7 +556,7 @@
 
                       <!-- Heading -->
                       <span class="h2 mb-0">
-                        ${{totalInterestPaid.toFormat(2)}}
+                        ${{totalInterestPaid.toFormat(DECIMALS)}}
                       </span>
 
                     </div>
