--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -253,12 +253,10 @@
           <h1 class="header-title display-4 text-white mb-4">
             ${{userTotalInterestEarned.toFormat(DECIMALS)}}
           </h1>
-          <div class="btn-group btn-group-lg" role="group" aria-label="Basic example">
-            <a class="btn btn btn-lg animated-background text-white border-0" data-toggle="modal"
-              data-target="#modalDeposit" (click)="openDepositActionModal()">Deposit</a>
-            <a class="btn btn-dark text-white" data-toggle="modal" data-target="#modalWithdraw"
-              (click)="openWithdrawActionModal()" [ngClass]="{'disabled': !userAddress}">Withdraw</a>
-          </div>
+          <a class="btn btn-lg animated-background text-white" data-toggle="modal" data-target="#modalDeposit"
+            (click)="openDepositActionModal()">Deposit</a>
+          <a class="btn btn-lg btn-dark text-white ml-3" data-toggle="modal" data-target="#modalWithdraw"
+            (click)="openWithdrawActionModal()" [ngClass]="{'disabled': !userAddress}">Withdraw</a>
 
         </div>
       </div>
@@ -407,7 +405,8 @@
 
               <!-- Title -->
               <h3 class="header-title h1">
-                2. Earn <strong class="interest-rate">{{oneYearInterestRate.toFormat(DECIMALS)}}%</strong> upfront fixed-rate
+                2. Earn <strong class="interest-rate">{{oneYearInterestRate.toFormat(DECIMALS)}}%</strong> upfront
+                fixed-rate
                 interest
               </h3>
 
@@ -436,7 +435,7 @@
 
               <!-- Title -->
               <h3 class="header-title h1">
-                88mph fees disclosures
+                88mph fee disclosure
               </h3>
 
             </div>
@@ -464,6 +463,33 @@
             present, 88mph is planning to mitigate
             it with sponsored deposits that help maintain the pool's solvency while offering
             visibility to 88mph's sponsors.
+          </p>
+          <div class="header mt-md-5">
+            <div class="header-body">
+
+              <!-- Title -->
+              <h3 class="header-title h1">
+                Sponsored deposits
+              </h3>
+
+            </div>
+          </div>
+          <p>
+            Sponsored deposits let companies or organizations support 88mph's security in exchange for their visibility
+            on 88mph.
+            Sponsored deposits are like normal deposits, except that you don't get the upfront interest and get counted
+            separately in the statistics.
+          </p>
+          <p>
+            Sponsoring 88mph won't have a direct cost, since sponsors can withdraw a deposit after its deposit period is
+            over. However, sponsors will be shouldering risk for normal users, and may lose money if a black swan event
+            occurs.
+          </p>
+          <p>
+            We're going to release ASAP an UI for sponsored deposits. If you're interested
+            in sponsoring, contact us at
+            <a href="mailto:hello@baconlabs.dev" target="_top">hello@baconlabs.dev</a> or drop us a line on <a
+              href="https://twitter.com/88mphapp" target="_blank">Twitter</a>
           </p>
           <div class="header mt-md-5">
             <div class="header-body">
@@ -607,8 +633,11 @@
             </form>
           </div>
           <div class="text-center mb-4">
-            <a href="https://twitter.com/88mphapp" target="_blank">
+            <a class="mr-4" href="https://twitter.com/88mphapp" target="_blank">
               <i class="fe fe-twitter h1"></i>
+            </a>
+            <a href="https://github.com/88mphapp" target="_blank">
+              <i class="fe fe-github h1 text-dark"></i>
             </a>
           </div>
           <div class="text-center text-secondary mb-5">
