Updated github link to baconlabs

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -637,7 +637,7 @@
             <a class="mr-4" href="https://twitter.com/88mphapp" target="_blank">
               <i class="fe fe-twitter h1"></i>
             </a>
-            <a href="https://github.com/88mphapp" target="_blank">
+            <a href="https://github.com/Bacon-labs" target="_blank">
               <i class="fe fe-github h1 text-dark"></i>
             </a>
           </div>
